oscp/kustomize/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-app-service
  labels:
    app: backend-app
    app.kubernetes.io/instance: backend-app
    app.kubernetes.io/name: backend-app
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8000
  selector:
    app.kubernetes.io/instance: backend-app
    app.kubernetes.io/name: backend-app
  sessionAffinity: None
  type: ClusterIP
