oscp/kustomize/k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: backend-app-route
  annotations:
    argocd.argoproj.io/sync-options: Validate=false
    openshift.io/host.generated: "true"
spec:
  tls:
    termination: edge
  to:
    kind: Service
    name: backend-app-service
    # name: kei-kimura-pipeline-from-scratch
    weight: 100
  wildcardPolicy: None
